Update some detailes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
           <img src="./assets/images/Logo.png" alt="logo" class="logo">
 
+          <div class="hamburger">
+             <span></span>
+             <span></span>
+             <span></span>
+          </div>
+
           <nav class="header-menu">
             <a href="#">Home</a>
             <a href="#">Tour</a>
@@ -125,8 +131,9 @@
                     we've gathered the best destinations to ignite your wanderlust.
                 </p>
             </div>
-
             <div class="cards">
+               <img class="left-arrow" src="./assets/images/left arrow btn.png" alt="left-arrow">
+
                 <div class="card no-1">
                     <img src="./assets/images/cairo.png" alt="Cairo">
 
@@ -170,6 +177,8 @@
                         <div class="stars">★★★★★</div>
                     </div>
                 </div>
+                <img class="right-arrow" src="./assets/images/right arrow btn.png" alt="right-arrow">
+
             </div>
             <div class="pagination">
                 <span class="active"></span>
@@ -305,6 +314,9 @@
                 <h2>Happy Client Stories</h2>
             </div>
             <div class="clients-review">
+
+                <img class="left-arrow" src="./assets/images/left arrow btn.png" alt="left-arrow">
+
                 <div class="client">
                     <img src="./assets/images/customer1.png" alt="">
                     <p>“Sarah, a local resident, possesses a profound connection to this region. Having once served as a host, she intimately comprehends the significance of having someone dedicated to managing every intricate detail, ensuring a seamless experience for all.”</p>
@@ -331,6 +343,8 @@
                         <span>Landscape Architect</span>
                     </div>
                 </div>
+
+                 <img class="right-arrow" src="./assets/images/right arrow btn.png" alt="right-arrow">
 
             </div>
             <div class="pagination">
