Update some detailes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <!-- HERO SECTION -->
+        <!-- HERO-SECTION -->
         <section class="hero-section">
             <div class="content">
                 <h1>Welcome to the World of Extraordinary Travel</h1>
@@ -68,7 +68,7 @@
             </div>
         </section>
 
-        <!-- TOUR TYPES SECTION -->
+        <!-- TOUR-TYPES= -->
         <section class="tour-types">
           <div class="container">
             <div class="tour-type-content">
@@ -119,7 +119,7 @@
             </div>
         </section>
 
-        <!-- POPULAR DESTINATIONS -->
+        <!-- POPULAR-DESTINATIONS -->
         <section class="where-to-go">
             <div class="container">
             <div class="where-to-go-content">
@@ -190,7 +190,7 @@
             </div>
         </section>
 
-      <!-- NEWS & BLOG -->
+      <!-- NEWS-&-BLOG -->
         <section class="exploring">
             <div class="exploring-content">
                 <span class="blue-text">Exploring</span>
@@ -256,7 +256,7 @@
         </section>
         
 
-        <!-- BEST OFFERS -->
+        <!-- BEST-OFFERS -->
         <section class="best-offers">
             <div class="container">
             <div class="best-offers-content">
@@ -307,7 +307,7 @@
             </div>
         </section>
 
-        <!-- HAPPY CLIENTS -->
+        <!-- HAPPY-CLIENTS -->
         <section class="happy-clients">
             <div class="happy-clients-content">
                 <span class="small-line"></span>
